--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
               <a class="nav-link" href="#rsvp">RSVP</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#family">Family</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#gifts">Gifts</a>
             </li>
           </ul>
@@ -235,16 +238,23 @@
               </div>
             </div>
           </div>
-          <div class="mengundang mt-3">
+        </div>
+      </div>
+    </section>
+
+    <section id="family" class="family">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="mt-3">
             <div class="container text-center">
               <div class="row justify-content-center">
                 <div class="col-12 text-center fw-bold mb-2">
                   <h2>Turut Mengundang</h2>
                 </div>
-                <div class="col-12 text-center mb-2 mt-3">
+                <div class="col-12 text-center mb-2 mt-3 fw-bold">
                   <h4>Mempelai Wanita</h4>
                 </div>
-                <div class="col-4">
+                <div class="col-5 col-lg-3">
                   <ul>
                     <li>Dani Suganda/Istri</li>
                     <li>Panca Purnama</li>
@@ -259,7 +269,7 @@
                     <li>Seluruh Keluarga</li>
                   </ul>
                 </div>
-                <div class="col-4">
+                <div class="col-5 col-lg-3">
                   <ul>
                     <li>(Adek) P.Brandan</li>
                     <li>(Adek) P.Brandan</li>
@@ -274,10 +284,10 @@
                     <li></li>
                   </ul>
                 </div>
-                <div class="col-12 text-center mb-2 mt-3">
+                <div class="col-12 text-center mb-2 mt-3 fw-bold">
                   <h4>Mempelai Pria</h4>
                 </div>
-                <div class="col-4">
+                <div class="col-5 col-lg-3">
                   <ul>
                     <li>Thaufikkhurrahman/Istri</li>
                     <li>Masran</li>
@@ -292,7 +302,7 @@
                     <li>Seluruh Keluarga</li>
                   </ul>
                 </div>
-                <div class="col-4">
+                <div class="col-5 col-lg-3">
                   <ul>
                     <li>(Abang) Kuala Lahang</li>
                     <li>(Bapak) Belengkong</li>
@@ -381,7 +391,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
             <h2>Kirim Hadiah</h2>
-            <p>
+            <p class="mb-4">
               Terima kasih atas doa dan restu yang telah anda berikan, jika anda
               ingin mengirimkan kado nikah, silahkan kirim dengan cara dibawah
               ini. Sebelumnya, kami mengucapkan banyak terima kasih.
@@ -413,12 +423,12 @@
     </footer>
 
     <div id="audio-container">
-      <!-- <audio id="song" autoplay loop>
+      <audio id="song" autoplay loop>
         <source
           src="Audio/Hampa - Ari Lasso (Saxophone Cover by Desmond Amos) (1).mp3"
           type="audio/mp3"
         />
-      </audio> -->
+      </audio>
       <div class="audio-icon-wrapper" style="display: none">
         <i class="bi bi-disc"></i>
       </div>
@@ -446,7 +456,7 @@
       });
     </script>
 
-    <!-- <script>
+    <script>
       const rootElement = document.querySelector(":root");
       const audioIconWrapper = document.querySelector(".audio-icon-wrapper");
       const audioIcon = document.querySelector(".audio-icon-wrapper i");
@@ -495,7 +505,7 @@
       //     disableScroll();
       //   }
       disableScroll();
-    </script> -->
+    </script>
 
     <script>
       window.addEventListener("load", function () {
