--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="Countdown/simplyCountdown.theme.default.css" />
     <script src="Countdown/simplyCountdown.min.js"></script>
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Bootstrap Icon -->
     <link
       rel="stylesheet"
@@ -35,7 +38,7 @@
       id="hero"
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
     >
-      <main>
+      <main data-aos="zoom-in" data-aos-duration="1500">
         <h4>The Wedding Ceremony Of</h4>
         <h1>Dian & Rahmat</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
@@ -126,15 +129,17 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center home-atas">
-            <h5 class="fw-bold">Bismillahirrahmanirrahim</h5>
-            <p>
+            <h5 class="fw-bold" data-aos="fade-right" data-aos-duration="2000">
+              Bismillahirrahmanirrahim
+            </h5>
+            <p data-aos="fade-right" data-aos-duration="2000">
               Maha Suci Allah yang telah menciptakan makhluk-Nya
               berpasang-pasangan. Ya Allah, perkenankanlah kami merangkaikan
               kasih sayang yang Kau ciptakan di antara kami untuk mengikuti
               Sunnah Rasul-Mu dalam rangka membangun keluarga yang sakinah,
               mawaddah, warahmah.
             </p>
-            <p>
+            <p data-aos="fade-left" data-aos-duration="2000">
               Maka dengan segenap kerendahan hati , kami mengundang
               Bapak/Ibu/Saudara untuk dapat hadir dan berbagi kebahagiaan dalam
               acara penikahan kami:
@@ -144,17 +149,29 @@
 
         <div class="container text-center mempelai">
           <div class="row">
-            <div class="col-8 offset-2">
+            <div
+              class="col-8 offset-2"
+              data-aos="fade-right"
+              data-aos-duration="2000"
+            >
               <h1>Dian Purnama Sari</h1>
               <p>
                 Putra Dari <br />Bapak H. M. Ali Asmin <br />& Ibu Hj. Jannatun,
                 S.Pd
               </p>
             </div>
-            <div class="col-lg-6 offset-lg-3">
+            <div
+              class="col-lg-6 offset-lg-3"
+              data-aos="zoom-in"
+              data-aos-duration="2000"
+            >
               <h2>Dengan</h2>
             </div>
-            <div class="col-lg-6 offset-lg-3">
+            <div
+              class="col-lg-6 offset-lg-3"
+              data-aos="fade-left"
+              data-aos-duration="2000"
+            >
               <h1>Rahmat</h1>
               <p>Putra Dari <br />Alm Bapak Muchtar Lutfi<br />& Ibu Rohani</p>
             </div>
@@ -167,8 +184,10 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <h2>Informasi Acara</h2>
-            <p class="alamat">
+            <h2 data-aos="fade-left" data-aos-duration="2000">
+              Informasi Acara
+            </h2>
+            <p class="alamat" data-aos="fade-left" data-aos-duration="2000">
               Alamat: Jl. Perjuangan, Gg. Umar, Pelawi Utara, Kec. Babalan,
               Kabupaten Langkat, Sumatera Utara 20881
             </p>
@@ -180,18 +199,26 @@
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
+              data-aos="fade-right"
+              data-aos-duration="2000"
             ></iframe>
             <a
               href="https://maps.app.goo.gl/JGLV2bpX6moHwkPp6"
               target="_blank"
               class="btn btn-light btn-sm my-3 mt-5 mb-5"
+              data-aos="zoom-in"
+              data-aos-duration="2000"
               >Klik untuk membuka peta</a
             >
           </div>
         </div>
 
         <div class="row justify-content-center mt-4">
-          <div class="col-md-5 col-10">
+          <div
+            class="col-md-5 col-10"
+            data-aos="flip-left"
+            data-aos-duration="2000"
+          >
             <div class="card text-center text-bg-light mb-5">
               <div class="card-header fw-bold">Akad Nikah</div>
               <div class="card-body">
@@ -215,7 +242,11 @@
             </div>
           </div>
 
-          <div class="col-md-5 col-10">
+          <div
+            class="col-md-5 col-10"
+            data-aos="flip-right"
+            data-aos-duration="2000"
+          >
             <div class="card text-center text-bg-light mb-5">
               <div class="card-header fw-bold">Resepsi</div>
               <div class="card-body">
@@ -248,13 +279,25 @@
           <div class="mt-3">
             <div class="container text-center">
               <div class="row justify-content-center">
-                <div class="col-12 text-center fw-bold mb-2">
+                <div
+                  class="col-12 text-center fw-bold mb-2"
+                  data-aos="zoom-in"
+                  data-aos-duration="2000"
+                >
                   <h2>Turut Mengundang</h2>
                 </div>
-                <div class="col-12 text-center mb-2 mt-3 fw-bold">
+                <div
+                  class="col-12 text-center mb-2 mt-3 fw-bold"
+                  data-aos="zoom-in-right"
+                  data-aos-duration="2000"
+                >
                   <h4>Mempelai Wanita</h4>
                 </div>
-                <div class="col-5 col-lg-3">
+                <div
+                  class="col-5 col-lg-3"
+                  data-aos="zoom-in-right"
+                  data-aos-duration="2000"
+                >
                   <ul>
                     <li>Dani Suganda/Istri</li>
                     <li>Panca Purnama</li>
@@ -269,7 +312,11 @@
                     <li>Seluruh Keluarga</li>
                   </ul>
                 </div>
-                <div class="col-5 col-lg-3">
+                <div
+                  class="col-5 col-lg-3"
+                  data-aos="zoom-in-right"
+                  data-aos-duration="2000"
+                >
                   <ul>
                     <li>(Adek) P.Brandan</li>
                     <li>(Adek) P.Brandan</li>
@@ -284,10 +331,18 @@
                     <li></li>
                   </ul>
                 </div>
-                <div class="col-12 text-center mb-2 mt-3 fw-bold">
+                <div
+                  class="col-12 text-center mb-2 mt-3 fw-bold"
+                  data-aos="zoom-in-left"
+                  data-aos-duration="2000"
+                >
                   <h4>Mempelai Pria</h4>
                 </div>
-                <div class="col-5 col-lg-3">
+                <div
+                  class="col-5 col-lg-3"
+                  data-aos="zoom-in-left"
+                  data-aos-duration="2000"
+                >
                   <ul>
                     <li>Thaufikkhurrahman/Istri</li>
                     <li>Masran</li>
@@ -302,7 +357,11 @@
                     <li>Seluruh Keluarga</li>
                   </ul>
                 </div>
-                <div class="col-5 col-lg-3">
+                <div
+                  class="col-5 col-lg-3"
+                  data-aos="zoom-in-left"
+                  data-aos-duration="2000"
+                >
                   <ul>
                     <li>(Abang) Kuala Lahang</li>
                     <li>(Bapak) Belengkong</li>
@@ -327,13 +386,21 @@
     <section id="rsvp" class="rsvp">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-8 col-10 text-center">
+          <div
+            class="col-md-8 col-10 text-center"
+            data-aos="zoom-in-right"
+            data-aos-duration="2000"
+          >
             <h2>Konfirmasi Kehadiran</h2>
             <p>Isi form dibawah ini untuk konfirmasi kehadiran.</p>
           </div>
         </div>
 
-        <div class="container text-center">
+        <div
+          class="container text-center"
+          data-aos="zoom-in-left"
+          data-aos-duration="2000"
+        >
           <form
             class="row"
             method="POST"
@@ -390,14 +457,24 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <h2>Kirim Hadiah</h2>
-            <p class="mb-4">
+            <h2 data-aos="zoom-in-down" data-aos-duration="2000">
+              Kirim Hadiah
+            </h2>
+            <p class="mb-4" data-aos="zoom-in-down" data-aos-duration="2000">
               Terima kasih atas doa dan restu yang telah anda berikan, jika anda
               ingin mengirimkan kado nikah, silahkan kirim dengan cara dibawah
               ini. Sebelumnya, kami mengucapkan banyak terima kasih.
             </p>
-            <img src="img/mandiri.png" />
-            <div class="fw-bolds">
+            <img
+              src="img/mandiri.png"
+              data-aos="zoom-in"
+              data-aos-duration="2000"
+            />
+            <div
+              class="fw-bolds"
+              data-aos="zoom-in-up"
+              data-aos-duration="2000"
+            >
               <p id="myInput">1090018086470</p>
               <p>Mandiri - Dian Purnama Sari</p>
             </div>
@@ -522,6 +599,11 @@
           });
         });
       });
+    </script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
