--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WEDDING DIAN & RAHMAT</title>
+    <title>WEDDING</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,8 +39,8 @@
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
     >
       <main data-aos="zoom-in" data-aos-duration="1500">
-        <h4 class="mb-5">The Wedding Ceremony Of</h4>
-        <h1 class="mb-5">Dian & Rahmat</h1>
+        <h4>The Wedding Ceremony Of</h4>
+        <h1>Dian & Rahmat</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown mt-5"></div>
         <a href="#home" class="btn btn-lg mt-5" onClick="enablescroll()"
@@ -188,8 +188,8 @@
               Informasi Acara
             </h2>
             <p class="alamat" data-aos="fade-left" data-aos-duration="2000">
-              Alamat: Jl. Tanjung Pura, Gg. Umar, Pelawi Utara, Kec. Babalan,
-              Kabupaten Langkat, Sumatera Utara 20857
+              Alamat: Jl. Perjuangan, Gg. Umar, Pelawi Utara, Kec. Babalan,
+              Kabupaten Langkat, Sumatera Utara 20881
             </p>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d995.0146651978059!2d98.29892426961422!3d4.008362337572285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNMKwMDAnMzAuMSJOIDk4wrAxNyc1OC40IkU!5e0!3m2!1sid!2sid!4v1701093038384!5m2!1sid!2sid"
@@ -521,8 +521,8 @@
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
         month: 1, // required
-        day: 3, // required
-        hours: 9, // Default is 0 [0-23] integer
+        day: 39, // required
+        hours: 0, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
           days: { singular: "hari", plural: "hari" },
