--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               data-aos="fade-right"
               data-aos-duration="2000"
             >
-              <h1>Dian Purnama Sari</h1>
+              <h1>Dian Purnama Sari, S.Pd</h1>
               <p>
                 Putra Dari <br />Bapak H. M. Ali Asmin <br />& Ibu Hj. Jannatun,
                 S.Pd
@@ -537,7 +537,7 @@
       </div>
     </footer>
 
-    <div id="audio-container">
+    <!-- <div id="audio-container">
       <audio id="song" autoplay loop>
         <source
           src="Audio/Hampa - Ari Lasso (Saxophone Cover by Desmond Amos) (1).mp3"
@@ -547,7 +547,7 @@
       <div class="audio-icon-wrapper" style="display: none">
         <i class="bi bi-disc"></i>
       </div>
-    </div>
+    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
