--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WEDDING</title>
+    <title>WEDDING DIAN & RAHMAT</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -80,7 +80,7 @@
         data-aos-duration="2000"
         data-aos-easing="ease-in-out"
       >
-        <p>The Wedding Ceremony Of</p>
+        <p>The Wedding Of</p>
         <h1>Dian & Rahmat</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown mt-5"></div>
@@ -364,16 +364,16 @@
                   data-aos-duration="2000"
                 >
                   <ul>
-                    <li>(Abang) Kuala Lahang</li>
+                    <li>(Abang) K. Lahang</li>
                     <li>(Bapak) Belengkong</li>
                     <li>(Acik) Batam</li>
                     <li>(Acik) Teluk Pinang</li>
                     <li>(Acik) Teluk Pinang</li>
-                    <li>(Acik) Kuala Lahang</li>
+                    <li>(Acik) K. Lahang</li>
                     <li>(Abang) Batam</li>
-                    <li>(Abang) Kuala Lahang</li>
-                    <li>(Bapak) Kuala Lahang</li>
-                    <li>(Keponakan) Kuala Lahang</li>
+                    <li>(Abang) K. Lahang</li>
+                    <li>(Bapak) K. Lahang</li>
+                    <li>(Keponakan) K. Lahang</li>
                     <li></li>
                   </ul>
                 </div>
@@ -537,17 +537,17 @@
       </div>
     </footer>
 
-    <!-- <div id="audio-container">
+    <div id="audio-container">
       <audio id="song" autoplay loop>
         <source
-          src="Audio/Hampa - Ari Lasso (Saxophone Cover by Desmond Amos) (1).mp3"
+          src="Audio/Afgan ft. Rossa - Kamu Yang Kutunggu (Lirik).mp3"
           type="audio/mp3"
         />
       </audio>
       <div class="audio-icon-wrapper" style="display: none">
         <i class="bi bi-disc"></i>
       </div>
-    </div> -->
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
