--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             >
               <h1>Dian Purnama Sari, S.Pd</h1>
               <p>
-                Putra Dari <br />Bapak H. M. Ali Asmin <br />& Ibu Hj. Jannatun,
+                Putri Dari <br />Bapak H. M. Ali Asmin <br />& Ibu Hj. Jannatun,
                 S.Pd
               </p>
             </div>
@@ -487,6 +487,62 @@
               />
             </a>
           </div>
+          <div
+            class="col mt-4"
+            data-aos="fade-right"
+            data-aos-easing="ease-in-out"
+            data-aos-duration="2000"
+          >
+            <a href="img/mempelai/7.jpg" data-lightbox="gallery">
+              <img
+                src="img/mempelai/thumbnail/7.jpg"
+                alt="Ami Reza 7"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div
+            class="col mt-4"
+            data-aos="fade-left"
+            data-aos-easing="ease-in-out"
+            data-aos-duration="2000"
+          >
+            <a href="img/mempelai/8.jpg" data-lightbox="gallery">
+              <img
+                src="img/mempelai/thumbnail/8.jpg"
+                alt="Ami Reza 8"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div
+            class="col mt-4"
+            data-aos="fade-right"
+            data-aos-easing="ease-in-out"
+            data-aos-duration="2000"
+          >
+            <a href="img/mempelai/9.jpg" data-lightbox="gallery">
+              <img
+                src="img/mempelai/thumbnail/9.jpg"
+                alt="Ami Reza 9"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div
+            class="col mt-4"
+            data-aos="fade-left"
+            data-aos-easing="ease-in-out"
+            data-aos-duration="2000"
+          >
+            <a href="img/mempelai/10.jpg" data-lightbox="gallery">
+              <img
+                src="img/mempelai/thumbnail/10.jpg"
+                alt="Ami Reza 10"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -537,7 +593,7 @@
       </div>
     </footer>
 
-    <div id="audio-container">
+    <!-- <div id="audio-container">
       <audio id="song" autoplay loop>
         <source
           src="Audio/Afgan ft. Rossa - Kamu Yang Kutunggu (Lirik).mp3"
@@ -547,7 +603,7 @@
       <div class="audio-icon-wrapper" style="display: none">
         <i class="bi bi-disc"></i>
       </div>
-    </div>
+    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
