--- a/index.html
+++ b/index.html
@@ -150,11 +150,7 @@
 
         <div class="container text-center mempelai">
           <div class="row mb-5">
-            <div
-              class="col-8 offset-2"
-              data-aos="fade-right"
-              data-aos-duration="2000"
-            >
+            <div class="col-12" data-aos="fade-right" data-aos-duration="2000">
               <h1>Dian Purnama Sari, S.Pd</h1>
               <p>
                 Putri Dari <br />Bapak H. M. Ali Asmin <br />& Ibu Hj. Jannatun,
@@ -168,11 +164,7 @@
             >
               <h2>Dengan</h2>
             </div>
-            <div
-              class="col-lg-6 offset-lg-3"
-              data-aos="fade-left"
-              data-aos-duration="2000"
-            >
+            <div class="col-12" data-aos="fade-left" data-aos-duration="2000">
               <h1>Rahmat</h1>
               <p>Putra Dari <br />Alm Bapak Muchtar Lutfi<br />& Ibu Rohani</p>
             </div>
@@ -354,7 +346,7 @@
                     <li>Khaled/Istri</li>
                     <li>Bambang/Istri</li>
                     <li>Halidi/Istri</li>
-                    <li>Rasqa Keenan Faturrahman</li>
+                    <li>Rasqa Keenan</li>
                     <li>Seluruh Keluarga</li>
                   </ul>
                 </div>
