--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
       </div>
     </footer>
 
-    <!-- <div id="audio-container">
+    <div id="audio-container">
       <audio id="song" autoplay loop>
         <source
           src="Audio/Afgan ft. Rossa - Kamu Yang Kutunggu (Lirik).mp3"
@@ -595,7 +595,7 @@
       <div class="audio-icon-wrapper" style="display: none">
         <i class="bi bi-disc"></i>
       </div>
-    </div> -->
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
