--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <li>(Uwak) P.Brandan</li>
                     <li>(Uwak) P.Brandan</li>
                     <li>(Uwak) P.Brandan</li>
-                    <li>(Ibuk) Rampaj</li>
+                    <li>(Ibuk) Rampah</li>
                     <li>(Pakcik) P.Brandan</li>
                     <li>(Pakcik) P.Brandan</li>
                     <li></li>
